--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
+    "@types/pg": "^8.11.6",
     "@types/web-push": "^3.6.4",
     "prisma": "^7.1.0",
     "ts-node": "^10.9.2",
